# Rivert

./: CMakeLists.txt  README.md
Playground/: CMakeLists.txt
Playground/assets/Maps/: map1.txt
Playground/inc/: Game.h  PlayerController.h  TileMap.h
Playground/src/: Game.cpp  PlayerController.cpp  main.cpp
Rivert/: CMakeLists.txt
Rivert/Playground/: Makefile  cmake_install.cmake
Rivert/Rivert/: Makefile  cmake_install.cmake
Rivert/inc/: AnimationSystem.h  Behaviour.h  Component.h  ECS.h  Entity.h  GameObject.h  InputHandler.h  RenderSystem.h  Rivert.h  ScriptSystem.h  SpriteRenderer.h  TextureManager.h  Tilemap.h  Transform.h  Vector2D.h  Window.h  test.h
Rivert/src/: AnimationSystem.cpp  ECS.cpp  GameObject.cpp  InputHandler.cpp  RenderSystem.cpp  Rivert.cpp  ScriptSystem.cpp  SpriteRenderer.cpp  TextureManager.cpp  Tilemap.cpp  Transform.cpp  Window.cpp  test.cpp
